--- a/templates/public/footer.tmpl
+++ b/templates/public/footer.tmpl
@@ -4,7 +4,7 @@
 <footer role="contentinfo">
 <div id="nav2">
   
-    <a href="/cgi-bin/public.cgi?rm=environment_form">ENV display</a><span style="color:#aabdba;">
+    <a href="/cgi-bin/public.cgi?rm=environment_form">ENV display</a><!-- <span style="color:#aabdba;"> | </span> -->
 
 </div>
   <p>
