added alt tags to all of the wait.gif (i.e. loading data) img tags

--- a/templates/info/average-times.tmpl
+++ b/templates/info/average-times.tmpl
@@ -17,7 +17,7 @@ $.ajaxSetup ({
 <div id="center" role="main">
 
     <div id="waitDiv">
-      Calculating averages for each library over the last 3 months... <img src="/wait.gif">
+      Calculating averages for each library over the last 3 months... <img src="/wait.gif" alt="loading indicator">
     </div>
 
     <div id="myDiv">
