--- a/templates/myaccount/test-zserver.tmpl
+++ b/templates/myaccount/test-zserver.tmpl
@@ -159,7 +159,7 @@ function set_secondary_tab(tab_id) {
   <h3>Test my zServer</h3>
 
   <div id="waitDiv">
-    Testing... <img src="/wait.gif">
+    Testing... <img src="/wait.gif" alt="loading indicator">
   </div>
 
 <div id="myDiv">
