--- a/templates/search/history.tmpl
+++ b/templates/search/history.tmpl
@@ -35,7 +35,7 @@ $.ajaxSetup ({
 	<div style="clear:both"></div>
 
     <div id="waitDiv">
-      Getting requests from history... <img src="/wait.gif">
+      Getting requests from history... <img src="/wait.gif" alt="loading indicator">
     </div>
 
     <div id="tabs">
