--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -41,7 +41,7 @@ $.ajaxSetup ({
 
 
   <div id="waitDiv">
-    Loading... <img src="/wait.gif">
+    Loading... <img src="/wait.gif" alt="loading indicator">
   </div>
 
   <div id="myDiv">
