--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -79,7 +79,7 @@ $('document').ready(function() {
   <hr>
   <div id="zserver">
     <a href="https://mintaka.gotdns.org/cgi-bin/myaccount.cgi?rm=myaccount_test_zserver_form"><h3>Z Server Status Check</h3></a>
-    <div id="waitDiv">Checking...<img src="/wait.gif"></div>
+    <div id="waitDiv">Checking...<img src="/wait.gif" alt="loading indicator"></div>
     <div class="zstatus">Z Server Present <span id="zPresent" class="zno">...</span></div>
     <div class="zstatus">Able to Connect <span id="zConnect" class="zno">...</span></div>
     <div class="zstatus">Able to Search <span id="zSearch" class="zno">...</span></div>
