--- a/templates/public/current.tmpl
+++ b/templates/public/current.tmpl
@@ -112,7 +112,7 @@ $('document').ready(function(){
 <div id="content">  
 <h1>Current Borrowing</h1>
         <div id="waitDiv">
-          Loading... <img src="/wait.gif">
+          Loading... <img src="/wait.gif" alt="loading indicator">
         </div>
 
 	<div id="myDiv">
