--- a/templates/rotations/admin/reports/item_highcirc.tmpl
+++ b/templates/rotations/admin/reports/item_highcirc.tmpl
@@ -66,7 +66,7 @@ $('document').ready(function(){
   </div>
 
   <div id="waitDiv">
-    Calculating... <img src="/wait.gif">
+    Calculating... <img src="/wait.gif" alt="loading indicator">
   </div>
 
   <div id="myDiv">
