--- a/templates/rotations/admin/reports/received_counts.tmpl
+++ b/templates/rotations/admin/reports/received_counts.tmpl
@@ -44,7 +44,7 @@ $('document').ready(function(){
 <div id="center" role="main">
 
     <div id="waitDiv">
-      Loading... <img src="/wait.gif">
+      Loading... <img src="/wait.gif" alt="loading indicator">
     </div>
 
     <div id="myDiv">
