--- a/templates/rotations/at_my_library.tmpl
+++ b/templates/rotations/at_my_library.tmpl
@@ -50,7 +50,7 @@ $('document').ready(function(){
 
 <div id="center" role="main">
 
-    <div id="waitDiv"><br/>      Generating barcode images... <img src="/wait.gif">
+    <div id="waitDiv"><br/>      Generating barcode images... <img src="/wait.gif" alt="loading indicator">
     </div>
 
     <div id="myDiv">
