--- a/templates/search/returns.tmpl
+++ b/templates/search/returns.tmpl
@@ -17,7 +17,7 @@ $.ajaxSetup ({
 <div id="center" role="main">
 
     <div id="waitDiv">
-      Loading... <img src="/wait.gif">
+      Loading... <img src="/wait.gif" alt="loading indicator">
     </div>
 
     <div id="myDiv">
