completed w3c validation of public side

--- a/templates/admin/welcome.tmpl
+++ b/templates/admin/welcome.tmpl
@@ -52,7 +52,7 @@ $('document').ready(function() {
 
 </div>
 
-<div id="main-right" class="tone-box" role="complimentary">
+<div id="main-right" class="tone-box" role="complementary">
   <h2>Updates</h2>
   <hr>
 
