--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -20,7 +20,7 @@
 
   </div><!--main-info-right-->
 
-<div id="aside-img-left" role="complimentary">
+<div id="aside-img-left" role="complementary">
         <img src='/img/fill-about.jpg' alt="Brown haired girl with a pony tail, reading a book in the park"/>
             <p class="note">Image care of <a href="https://www.flickr.com/photos/swanksalot/2715407049/">Seth Anderson</a></p>
 
