--- a/templates/public/contact.tmpl
+++ b/templates/public/contact.tmpl
@@ -19,7 +19,7 @@
 		</p>
 	</div>
 
-	<div id="aside-img-right" role="complimentary">
+	<div id="aside-img-right" role="complementary">
 	  <img src="<TMPL_VAR name='logo_path'>" alt="<TMPL_VAR name='logo_alt_text'>" />
 	  <p class="note">Image care of <TMPL_VAR name="logo_credit"></p>
 	</div>
