--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -35,7 +35,7 @@
 
 </div><!--main-info-left-->
 
-<div id="aside-img-right" role="complimentary">
+<div id="aside-img-right" role="complementary">
   <img src="/img/fill-faq.png" alt="Overlapping question marks">
 </div>
 
