--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -283,9 +283,9 @@
 <!-- End content -->
 </main>
 
-<!--***************ARIA MARKER 'COMPLIMENTARY'***************-->
+<!--***************ARIA MARKER 'COMPLEMENTARY'***************-->
 
-<div id="aside" class="tone-box" role="complimentary">
+<div id="aside" class="tone-box" role="complementary">
   <div id="image"></div>
   <div id="stat"></div>
   <div id="leftcontent"></div>
