--- a/templates/search/lightning.tmpl
+++ b/templates/search/lightning.tmpl
@@ -66,8 +66,8 @@ $('document').ready(function(){
   </div>
  </main> 
 
- <!--***************ARIA MARKER 'COMPLIMENTARY'***************-->
-<div id="aside" class="tone-box" role="complimentary">
+ <!--***************ARIA MARKER 'COMPLEMENTARY'***************-->
+<div id="aside" class="tone-box" role="complementary">
   <div id="recordview">
        <div id="stat"></div>
        <div id="termlist"></div>
