--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -119,7 +119,7 @@ $('document').ready(function() {
 
 </div>
 
-<div id="main-right" class="tone-box" role="complimentary">
+<div id="main-right" class="tone-box" role="complementary">
   <h2>Updates</h2>
   <hr>
 
