--- a/templates/info/documents.tmpl
+++ b/templates/info/documents.tmpl
@@ -11,7 +11,7 @@
 
 <h2>Documents</h2>
 
-<table id="fill-table" class="table-width-lib">
+<table class="fill-table table-width-lib">
 
   <tr>
     <td>
