--- a/templates/myaccount/test-zserver.tmpl
+++ b/templates/myaccount/test-zserver.tmpl
@@ -162,24 +162,24 @@ function set_secondary_tab(tab_id) {
     Testing... <img src="/wait.gif" alt="loading indicator">
   </div>
 
-<div id="myDiv">
-  <div id="mylistDiv">
+  <div id="myDiv">
+    <div id="mylistDiv">
     
-<h4>General</h4>
-<table id="fill-table" class="table-width-lib">
+      <h4>General</h4>
+      <table class="fill-table table-width-lib">
 	<tr><td style="width:20%">success?</td><td id="success">...</td></tr>
 	<tr><td style="width:20%">libsym</td><td id="libsym">...</td></tr>
       </table>
 
-<h4>Connection</h4>
-<table id="fill-table" class="table-width-lib">
+      <h4>Connection</h4>
+      <table class="fill-table table-width-lib">
 	<tr><td style="width:20%">success?</td><td id="zServer_status_connection_success">...</td></tr>
 	<tr><td style="width:20%">connection</td><td id="zServer_status_connection_connectionString">...</td></tr>
 	<tr><td style="width:20%">status</td><td id="zServer_status_connection_status">...</td></tr>
       </table>
 
-<h4>Search</h4>
-<table id="fill-table" class="table-width-lib">
+      <h4>Search</h4>
+      <table class="fill-table table-width-lib">
 	<tr><td style="width:20%">success?</td><td id="zServer_status_search_success">...</td></tr>
 	<tr><td style="width:20%">type</td><td id="zServer_status_search_type">...</td></tr>
 	<tr><td style="width:20%">status</td><td id="zServer_status_search_status">...</td></tr>
@@ -187,19 +187,19 @@ function set_secondary_tab(tab_id) {
 	<tr><td style="width:20%">Number found</td><td id="zServer_status_search_found">...</td></tr>
       </table>
 
-<h4>Record</h4>
-<table id="fill-table" class="table-width-lib">
+      <h4>Record</h4>
+      <table class="fill-table table-width-lib">
 	<tr><td style="width:20%">success?...</td><td id="zServer_status_record_success">...</td></tr>
 	<tr><td style="width:20%">status</td><td id="zServer_status_record_status">...</td></tr>
 	<tr><td style="width:20%">author</td><td id="zServer_status_record_author">...</td></tr>
 	<tr><td style="width:20%">title</td><td id="zServer_status_record_title">...</td></tr>
-</table>
+      </table>
 
-<h4>Log</h4>
-<p><PRE id="log">...</PRE></p>
-
-    </div>
-  </div>
-</div>
+      <h4>Log</h4>
+      <PRE id="log">...</PRE>
+      
+    </div><!-- myListDiv -->
+  </div><!-- myDiv -->
+</div><!-- center -->
 
 <TMPL_INCLUDE NAME="footer.tmpl">
