--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -66,11 +66,11 @@ $('document').ready(function(){
 
 </div><!--div id main info welcome-->
 
-<script language="JavaScript" type="text/javascript">
+<script type="text/javascript">
   $('#csstabs').hide();
 </script>
 
-<script language="JavaScript" type="text/javascript">
+<script type="text/javascript">
   document.loginform.authen_username.focus();
 </script>
 
