--- a/templates/search/new_patron_requests.tmpl
+++ b/templates/search/new_patron_requests.tmpl
@@ -38,6 +38,6 @@ $.ajaxSetup ({
     <p><strong>For privacy reasons, fILL does not keep a record of patron requests.</strong></p>
   </div>
 
-</div>
+</div><!-- center -->
 
 <TMPL_INCLUDE NAME="footer.tmpl">
