--- a/templates/search/pending.tmpl
+++ b/templates/search/pending.tmpl
@@ -16,24 +16,23 @@ $.ajaxSetup ({
 
 <div id="center" role="main">
 
-    <div id="waitDiv">
-      Loading... <img src="/wait.gif" alt="loading indicator">
-    </div>
-
-    <div id="myDiv">
-      <div id="mylistDiv"></div>
-    </div>
-
-<div id="instructions" class="tone-box">
+  <div id="waitDiv">
+    Loading... <img src="/wait.gif" alt="loading indicator">
+  </div>
+  
+  <div id="myDiv">
+    <div id="mylistDiv"></div>
+  </div>
+  
+  <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
-    <ul>      <p>If a lending library has not yet responded to your request, that request will be shown here.</p>
-      <p>If there are more possible lenders, you'll see a 'Try next lender' button; otherwise, you'll see the message "No other lenders".</p>
-      <p>You'll also have the option to cancel the request.</p>
-      <p>Remember that not all libraries are open every day; it may take a few days to get a response.</p>
-      <p>For any individual request, fILL sorts the list of potential lenders in net-borrower/net-lender order. The Pending tab gives the first lender 3 days to respond before giving you the option to try the next lender.</p>
+    <p>If a lending library has not yet responded to your request, that request will be shown here.</p>
+    <p>If there are more possible lenders, you'll see a 'Try next lender' button; otherwise, you'll see the message "No other lenders".</p>
+    <p>You'll also have the option to cancel the request.</p>
+    <p>Remember that not all libraries are open every day; it may take a few days to get a response.</p>
+    <p>For any individual request, fILL sorts the list of potential lenders in net-borrower/net-lender order. The Pending tab gives the first lender 3 days to respond before giving you the option to try the next lender.</p>
+  </div><!-- instructions -->
 
-</div>
-
-</div>
+</div><!-- center -->
 
 <TMPL_INCLUDE NAME="footer.tmpl">
