--- a/templates/search/request_placed.tmpl
+++ b/templates/search/request_placed.tmpl
@@ -48,7 +48,7 @@ $('document').ready(function(){
     </TMPL_IF>
 
     <br/>
-    <table id="fill-table" class="table-width-lib">
+    <table class="fill-table table-width-lib">
       <tr><td>Requesting user</td><td><TMPL_VAR NAME="username"></td></tr>
       <tr><td>Title</td><td><TMPL_VAR NAME="title"></td></tr>
       <tr><td>Author</td><td><TMPL_VAR NAME="author"></td></tr>
