--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -23,7 +23,7 @@ $.ajaxSetup ({
   
   <div id="unfilled-codes" style="display:none">
     <h3>Unfilled codes</h3>
-    <table id="fill-table" class="table-width-lib">
+    <table class="fill-table table-width-lib">
       <tr><td>in-use /on-loan</td><td>Currently checked out to a patron.</td></tr>
       <tr><td>in-process</td><td>Not ready for loan.</td></tr>
       <tr><td>lost</td><td>Item has been declared missing.</td></tr>
