--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -1,6 +1,6 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 
-<script language="javascript">
+<script>
 
 $('document').ready(function() {
 
@@ -104,9 +104,9 @@ $('document').ready(function() {
   <p><strong>Library fILL</strong></p>
   <ul>
     <li><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></li>
-    <li><a href="/cgi-bin/info.cgi?rm=send_pdf&doc=fILL_-_User_Guide.pdf">fILL User's Guide</a></li>
-    <li><a href="/cgi-bin/info.cgi?rm=send_pdf&doc=fILL_brochure.pdf">Manitoba Libraries Conference 2012 fILL brochure (3-fold)</a></li>
-    <li><a href="/cgi-bin/info.cgi?rm=send_pdf&doc=Rotations_Manager_guide.pdf">Rotations Manager guide</a></li>
+    <li><a href="/cgi-bin/info.cgi?rm=send_pdf&amp;doc=fILL_-_User_Guide.pdf">fILL User's Guide</a></li>
+    <li><a href="/cgi-bin/info.cgi?rm=send_pdf&amp;doc=fILL_brochure.pdf">Manitoba Libraries Conference 2012 fILL brochure (3-fold)</a></li>
+    <li><a href="/cgi-bin/info.cgi?rm=send_pdf&amp;doc=Rotations_Manager_guide.pdf">Rotations Manager guide</a></li>
   </ul>
   
   <p><strong>Counting Opinions</strong></p> 	
@@ -181,13 +181,12 @@ $('document').ready(function() {
   <p>Your ongoing feedback is key to ensure our development resources are focused on the elements and features that are important across the library
     community.  Once you've had a chance to review the changes, we'd really appreciate if you would let us know what you think and share your first
     impressions with us be sending your feedback to <a href="mailto:pls@gov.mb.ca">pls@gov.mb.ca</a>.</p>
-  <p>Among the many user interface updates you'll see:
-    <ul>
-      <li>Larger text</li>
-      <li>Enhanced menu notifications</li>
-      <li>Accessibility features</li>
-    </ul>
-  </p>
+  <p>Among the many user interface updates you'll see:</p>
+  <ul>
+    <li>Larger text</li>
+    <li>Enhanced menu notifications</li>
+    <li>Accessibility features</li>
+  </ul>
   <p>- the fILL development team</p>
 </div>	
 </div><!--div id center-->
