--- a/htdocs/css/themes-library-contrast.css
+++ b/htdocs/css/themes-library-contrast.css
@@ -343,30 +343,30 @@ div.termtitle {
 
 /*** FILL #fill-table STYLES **/
 
-#fill-table {
+.fill-table {
 	background: #fff;
 	border: 2px solid #959595;
 	color: #000;
 }
 
-#fill-table td {
+.fill-table td {
 }
 
-#fill-table th {
+.fill-table th {
 }
 
-#fill-table td, #fill-table th {
+.fill-table td, #fill-table th {
   border: 1px solid #fff;
 }
-#fill-table tr:first-child th {
+.fill-table tr:first-child th {
 }
-#fill-table tr:last-child td {
+.fill-table tr:last-child td {
 }
-#fill-table tr td:first-child,
-#fill-table tr th:first-child {
+.fill-table tr td:first-child,
+.fill-table tr th:first-child {
 }
-#fill-table tr td:last-child,
-#fill-table tr th:last-child {
+.fill-table tr td:last-child,
+.fill-table tr th:last-child {
 }
 
 .table-width-pub {
