--- a/templates/info/average-times.tmpl
+++ b/templates/info/average-times.tmpl
@@ -16,24 +16,22 @@ $.ajaxSetup ({
 
 <div id="center" role="main">
 
-    <div id="waitDiv">
-      Calculating averages for each library over the last 3 months... <img src="/wait.gif" alt="loading indicator">
-    </div>
+  <div id="waitDiv">
+    Calculating averages for each library over the last 3 months... <img src="/wait.gif" alt="loading indicator">
+  </div>
 
-    <div id="myDiv">
-      <div id="mylistDiv"></div>
+  <div id="myDiv">
+    <div id="mylistDiv"></div>
   </div>
 
   <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
-    <ul>
     <p>This report looks at historic requests (those that have completed their life cycles) for the last 3 months.</p>
     <p>It examines the time differences between certain events (e.g. when the borrower made the request and when the lender responded to it).</p>
     <p>You can sort the table by clicking on the column headings. Clicking a column heading a second time will reverse the sort order.</p>
     <p>Values are rounded to the nearest day (or hour, depending on the column).  A value of "0" means the events happened (on average) on the same day.  A blank means that there were no events of that type.</p>
-    </ul>
   </div>
 
-</div>
+</div><!-- center -->
 
 <TMPL_INCLUDE NAME="footer.tmpl">
