--- a/templates/info/view_report.tmpl
+++ b/templates/info/view_report.tmpl
@@ -80,7 +80,7 @@ $('document').ready(function(){
     <h2>Instructions</h2>
 
     <h3>Borrowing</h3>
-    <table id="fill-table" class="table-width-lib">
+    <table class="fill-table table-width-lib">
       <tr><td style="border:1px solid black;">Items requested</td><td style="border:1px solid black;">Number of items you've requested.</td></tr>
       <tr><td style="border:1px solid black;">Actual requests</td><td style="border:1px solid black;">Number of requests made to lenders, including unfilled requests</td></tr>
       <tr><td style="border:1px solid black;">Unfilled requests</td><td style="border:1px solid black;">Number of unfilled requests</td></tr>
@@ -89,7 +89,7 @@ $('document').ready(function(){
     </table>
 
     <h3>Lending</h3>
-    <table id="fill-table" class="table-width-lib">
+    <table class="fill-table table-width-lib">
       <tr><td style="border:1px solid black;">Requests to lend</td><td style="border:1px solid black;">Number of requests you received from other libraries</td></tr>
       <tr><td style="border:1px solid black;">Could not fill</td><td style="border:1px solid black;">Number of requests to which you responded 'unfilled'</td></tr>
       <tr><td style="border:1px solid black;">Shipped</td><td style="border:1px solid black;">Number of items you sent out.</td></tr>
