--- a/templates/search/pull_list.tmpl
+++ b/templates/search/pull_list.tmpl
@@ -2,7 +2,7 @@
 <TMPL_INCLUDE NAME="submenu_lend.tmpl">
 
 
-<script language="javascript">
+<script>
 
 $('document').ready(function() {
 
@@ -43,12 +43,12 @@ $('document').ready(function() {
 
 <div id="center" role="main">
 
-    <table id="pull-list" class="row-border">
-      <thead>
-	<tr><th>Call Number</th><th>Author</th><th>Title</th><th>Date/Time requested</th><th>Requested by</th><th>Requestor note</th><th>Pub date</th><th>Your barcode for the requesting library</th></tr>
-      </thead>
-      <tfoot><tr><td colspan="8">You can print this list to use while in the stacks.</td></tr></tfoot>
-      <tbody>
+  <table id="pull-list" class="row-border">
+    <thead>
+      <tr><th>Call Number</th><th>Author</th><th>Title</th><th>Date/Time requested</th><th>Requested by</th><th>Requestor note</th><th>Pub date</th><th>Your barcode for the requesting library</th></tr>
+    </thead>
+    <tfoot><tr><td colspan="8">You can print this list to use while in the stacks.</td></tr></tfoot>
+    <tbody>
       <TMPL_LOOP name="pulls">
 	<tr>
 	  <td><TMPL_VAR NAME="call_number"></td>
@@ -60,21 +60,19 @@ $('document').ready(function() {
 	  <td><TMPL_VAR NAME="pubdate"></td>
 	  <td>
 	    <TMPL_VAR NAME="barcode"><br/>
-	    <img src="data:image/png;base64,<TMPL_VAR NAME="barcode_image">"/>
+	    <img alt="barcode image" src="data:image/png;base64,<TMPL_VAR NAME="barcode_image">"/>
 	  </td>
 	</tr>
       </TMPL_LOOP>
-      </tbody>
-    </table>
+    </tbody>
+  </table>
     
 
   <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
-<p>You can print this list to use while in the stacks.</p>
+    <p>You can print this list to use while in the stacks.</p>
   </div>
 
-</div>
-
-</div>
+</div><!-- center -->
 
 <TMPL_INCLUDE NAME="footer.tmpl">
