--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -122,10 +122,30 @@ $('document').ready(function() {
 <div id="main-right" class="tone-box" role="complementary">
   <h2>Updates</h2>
   <hr>
+  <strong>Wednesday 25th March 2015 Release notes</strong> <span style="color:red;"> (new!)</span>
+  <h2>Landing Page</h2>
+  <p>The landing page for both libraries and users has been updated to improve the patron experience.</p>
+  <ul>
+    <li>Patrons are now able to log in to the system from the landing page.</li>
+    <li>Librarians are able to access their login page from a link in the footer.</li>
+  </ul>
+  <h2>Library side</h2>
+  <p>The home page now features a zServer status check on the left-hand side.  Clicking on the results of the check will take you to the full zServer test.</p>
+  <p>The patron list has been moved under Account.  Within the patron list, you can now use <strong>Yes</strong> and <strong>No</strong> instead of 1 and 0 to indicate verified and enabled.  You are also able to edit a patron's card number.</p>
+  <p>Info has received a name change to Reports.</p>
+  <p>Font-size changes are now "sticky" across all fILL pages.</p>
+  <p>Added message From and To fields in History, and removed patron barcode (ILL history records no longer contain any patron-identifying information).</p>
+  <p>Items waiting for a renewal answer no longer show on the Returns list.</p>
+  <p>Bug fix to the lender override due date.</p>
+  <h2>Patron side</h2>
+  <p>Libraries that were able to send us a copy of their logo or their local authorities logo have had these added to the system.  Now when patrons view the Contact page, the library's logo will appear.</p>
+  <p>The Help page has been updated to improve accessibility.</p>
+  <p>Many fixes to Internet Explorer problems.</p>
 
-  <strong>Monday 19th December 2014 Release notes</strong> <span style="color:red;"> (new!)</span>
- 
-<p>The improvements represented below have been inspired through the collective input received from the library community and some have been integrated from direct feedback. We will continue to refine areas of the site wherever necessary and your ongoing support and advice is very much appreciated. If your library has ideas on how we can improve fILL together, please send your thoughts to <a href="mailto:pls@gov.mb.ca">pls@gov.mb.ca</a></p>
+
+  <hr>
+  <strong>Monday 19th December 2014 Release notes</strong>
+  <p>The improvements represented below have been inspired through the collective input received from the library community and some have been integrated from direct feedback. We will continue to refine areas of the site wherever necessary and your ongoing support and advice is very much appreciated. If your library has ideas on how we can improve fILL together, please send your thoughts to <a href="mailto:pls@gov.mb.ca">pls@gov.mb.ca</a></p>
 <h3>Updates and bug fixes</h3>
 <p>The update release notes have been divided into two sections to best articulate the updates and fixes.</p>
 <h3>Library Side</h3>
