--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -214,10 +214,11 @@
 
   <div id="covers">
     
-    <a href="#" class="coverlink" title="Craig Davidson, Cataract City"><img class="covers4" alt="Craig Davidson, Cataract City" src="/img/covers/gp13-cataractcity.jpg"></a>
-    <a href="#" class="coverlink" title="Lisa Moore, Caught"><img class="covers4" alt="Lisa Moore, Caught" src="/img/covers/gp13-caught.jpeg"></a>
-    <a href="#" class="coverlink" title="Dan Vyleta, The Crooked Maid"><img class="covers4" alt="Dan Vyleta, The Crooked Maid" src="/img/covers/gp13-crookedmaid.jpg"></a>
-    <a href="#" class="coverlink" title="Dennis Bock, Going Home Again"><img class="covers4" alt="Dennis Bock, Going Home Again" src="/img/covers/gp13-homeagain.jpg"></a>
+    <a href="#" class="coverlink" title=" "And The Birds Rained Down" Jocelyne Saucier  "><img class="  covers5 " src=" /img/cr14-andthebirdsraineddown-220.jpg " alt=" "And The Birds Rained Down" Jocelyne Saucier  "></a>
+    <a href="#" class="coverlink" title=" "The Inconvenient Indian" Thomas King "><img class="  covers6 " src=" /img/cr14-inconvenientindian-220.jpg  " alt=" "The Inconvenient Indian" Thomas King "></a>
+    <a href="#" class="coverlink" title=" "Intolerable: A Memoir of Extremes" Kamal Al Solaylee "><img class="  covers7 " src=" /img/cr14-intolerable-220.jpg " alt=" "Intolerable: A Memoir of Extremes" Kamal Al Solaylee "></a>
+    <a href="#" class="coverlink" title=" "Ru" kim thuy "><img class="  covers8 " src=" /img/cr14-ru-kim-thuy-books100.jpg  " alt=" "Ru" kim thuy "></a>
+    <a href="#" class="coverlink" title=" "When everything feels like the movies" Raziel Reid "><img class="  covers9 " src=" /img/cr14-wheneverythingfeelslikethemovies-220.jpg  " alt=" "When everything feels like the movies" Raziel Reid "></a>
 
   </div>
 
