--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -373,7 +373,12 @@ nav li a
 
 #covers {
 	margin:auto;
+	display: block;
 }/*more in mobile styles*/
+
+#covers-container {
+	margin: auto;
+}
 
 .covers6 {
     height: 180px;
