library contact - added library web site

--- a/templates/myaccount/settings.tmpl
+++ b/templates/myaccount/settings.tmpl
@@ -18,7 +18,10 @@
       <input TYPE="hidden" NAME="name" VALUE="<TMPL_VAR NAME=editName>">
       
       <label for="email_address">Email address:</label><br>
-      <input id="email_address" TYPE="text" NAME="email_address" MAXLENGTH="120" VALUE="<TMPL_VAR NAME=editEmail>">
+      <input id="email_address" TYPE="text" NAME="email_address" MAXLENGTH="120" VALUE="<TMPL_VAR NAME=editEmail>"><br />
+      
+      <label for="website">Web site:</label><br>
+      <input id="website" TYPE="text" NAME="website" VALUE="<TMPL_VAR NAME=editWebsite>">
       
       <h3>Interlibrary Loan Mailing address</h3> 
       <label for="library">Library:</label><br>
