--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -74,18 +74,18 @@ img
 
 h1 {
 	margin-bottom: .5em;
-	font-size: 1.4em;
+	font-size: 1.5em;
 	text-transform: capitalize;
 }
 
 h2 {
 	margin-bottom: .5em;
-	font-size: 1.2em;
+	font-size: 1.3em;
 	text-transform: capitalize;
 }
 
 h3 {
-	font-size: 1em;
+	font-size: 1.1em;
 	font-weight: bold;
 }
 
@@ -364,8 +364,7 @@ nav li a
 	display: inline;
 }
 
-.tone-box 
-{
+.tone-box {
 }
 
 .lighter-box {
