changed fill-table to ID

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -385,12 +385,12 @@ nav li a
     height: 180px;
     width: 120px;
     margin-top: 2em;
-    margin: .3em;
+    margin: .2em;
 }
 
 .covers5 {
-	width: 210px;
-	height: 305px;
+	width: 200px;
+	height: 300px;
     margin-top: 2em;
     margin: .3em;
 }
@@ -643,17 +643,17 @@ div.termtitle {
 
 /*** FILL #fill-table STYLES **/
 
-.fill-table {
+#fill-table {
   	border-collapse: collapse;
   	margin: 1em auto;
 	padding: .5em;
 }
 
-.fill-table td {
+#fill-table td {
 	padding: 1em;
 }
 
-.fill-table th {
+#fill-table th {
 	font-weight: bold;
 	font-size: 1.2em;
 }
