--- a/htdocs/css/themes-public-default.css
+++ b/htdocs/css/themes-public-default.css
@@ -169,12 +169,12 @@ button {
 }
 
 /*** FILL #fill-table STYLES **/
-.fill-table {
+#fill-table {
     background: #e3e3e3;
     border: 2px solid #b3b3b3;
     color: #505050;
 }
-.fill-table td, .fill-table th {
+#fill-table td, #fill-table th {
     border: 1px solid #fff;
 }
 
